# FromSoftSaveManager

./: .gitignore  CMakeLists.txt  README.md  app.rc.in  exr_conversion.py  gen_resources.py  main.py  pyproject.toml
from_soft_manager/parse/: __init__.py  _ds3_items.py  _dsr_items.py  parse_ds2.py  parse_ds3.py  parse_dsr.py  parse_er.py  parse_sekiro.py  structures.py  utils.py
from_soft_manager/ui/: __init__.py  _keys_windows.py  app.py  control.py  dsr_widget.py  keys.py  settings.py  settings_dialog.py  structures.py  utils.py  window.py
from_soft_manager/ui/ds2sotfs_widget/: __init__.py  base.py
from_soft_manager/ui/ds3_widget/: base.py  info.py  inventory.py
from_soft_manager/ui/ds3_widget/resources/: __init__.py
from_soft_manager/ui/dsr_widget/: __init__.py  base.py  info.py  inventory.py
from_soft_manager/ui/dsr_widget/resources/: __init__.py
from_soft_manager/ui/er_widget/: __init__.py  base.py  info.py
from_soft_manager/ui/models/: config.py
from_soft_manager/ui/resources/: __init__.py
from_soft_manager/ui/sekiro_widget/: base.py
from_soft_manager/ui/style/: __init__.py  style.qss
python/: debug_console.py
python/from_soft_manager/: __init__.py
python/from_soft_manager/parse/: __init__.py  _ds3_items.py  _dsr_items.py  parse_dsr.py  parse_sekiro.py
python/from_soft_manager/ui/: control.py  structures.py
python/from_soft_manager/ui/ds2sotfs_widget/: base.py
python/from_soft_manager/ui/ds3_widget/: __init__.py  inventory.py
python/from_soft_manager/ui/dsr_widget/: base.py  info.py  inventory.py
python/from_soft_manager/ui/er_widget/resources/: __init__.py
python/from_soft_manager/ui/icons/: __init__.py
python/from_soft_manager/ui/models/: __init__.py
python/from_soft_manager/ui/sekiro_widget/: __init__.py
python/from_soft_manager/ui/style/: style.qss
src/: CMakeLists.txt  main.cpp
src/parse/: DSRItems.cpp  DSRItems.h  DSRSaveFile.cpp  DSRSaveFile.h  Game.h  Parse.cpp  Parse.h  SL2File.cpp  SL2File.h  Utils.cpp  Utils.h
src/parse/DS3/: Items.cpp  Items.h  SaveFile.cpp  SaveFile.h
src/parse/DSR/: Items.cpp  Items.h  SaveFile.cpp  SaveFile.h
src/parse/EldenRing/: SaveFile.cpp  SaveFile.h
src/resources/: ds2_images.qrc  ds3_images.qrc  ds3_inv_images.qrc  ds3_inv_images_init.h  ds3_inventory_images.qrc  ds3_inventory_images_init.h  dsr_images.qrc  dsr_images_init.h  dsr_inv_images.qrc  dsr_inv_images_init.h  dsr_inventory_images.qrc  er_images.qrc  resources.qrc  sekiro_images.qrc
src/resources/style/: app.qss
src/ui/: BackupsModel.cpp  BackupsModel.h  BaseGameWidget.h  Config.cpp  Config.h  ConfigModel.cpp  ConfigModel.h  Controller.cpp  Controller.h  DSRWidget.cpp  DSRWidget.h  GameWidgets.h  KeysWindows.cpp  KeysWindows.h  MainWindow.cpp  MainWindow.h  ManageBackupsWidget.cpp  ManageBackupsWidget.h  NiceCheckbox.cpp  NiceCheckbox.h  SaveModel.cpp  SaveModel.h  SettingsWidget.cpp  SettingsWidget.h  SideBar.cpp  SideBar.h  SideBarWidget.cpp  SideBarWidget.h  SquareButton.h  Utils.cpp  Utils.h  resources.qrc
src/ui/DS2Widget/: DS2Widget.cpp  DS2Widget.h
src/ui/DS3Widget/: CharInfo.cpp  CharInfo.h  DS3Widget.cpp  DS3Widget.h  Inventory.cpp  Inventory.h
src/ui/DSRWidget/: CharInfo.cpp  CharInfo.h  Covenants.cpp  Covenants.h  DSRWidget.cpp  DSRWidget.h  Inventory.cpp  Inventory.h
src/ui/ERWidget/: CharInfo.cpp  CharInfo.h  ERWidget.cpp  ERWidget.h
src/ui/SekiroWidget/: SekiroWidget.cpp  SekiroWidget.h
src/ui/resources/: dsr_images.qrc  dsr_images_init.cpp  dsr_images_init.h  resources.qrc
src/ui/resources/style/: app.qss
