[project]
name = "fromsoftsavemanager"
version = "0.2.0"
description = "Save file manager for FromSoftware games"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "cryptography",
    "platformdirs",
    "pywin32 ; platform_system == 'Windows'",
    "arrow",
    "semver",
    "cx_freeze"
]

[tool.cxfreeze]
executables = [
    {script = "main.py", base = "gui", icon = "icon.ico", target_name = "FromSoftSaveManager"}
]

[tool.cxfreeze.build_exe]
excludes = ["tkinter", "unittest"]
zip_include_packages = ["encodings", "PySide6", "shiboken6"]